# ultraclick

./: AGENTS.md  README.md  demo.py  llms.md  pyproject.toml  readme.md  simple.py
.github/workflows/: release.yml  test.yml  tests.yml
src/ultraclick/: __init__.py  llms.md
tests/: __main__.py  help_with_required_init_args.py  logging_capture.py  test_demo.py  test_help_with_required_init_args.py  test_logging_capture.py  test_run_command_parse_json.py  test_simple.py  test_url_param_type.py
