[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ultraclick"
version = "0.2.0"
description = "Thin wrapper around the Python 'click' library to allow building class based CLIs"
authors = [{ name = "Ronny Rentner", email = "ultraclick.code@ronny-rentner.de" }]
readme = "readme.md"
license = "GPL-3.0-or-later"
license-files = ["license.txt"]
requires-python = ">=3.9"
keywords = ["ultraclick", "cli", "click", "setuptools", "development", "rich"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: User Interfaces",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "click >= 8.1.8",
  "rich >= 14.0.0",
  "rich_click >= 1.8.0"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
Homepage = "https://github.com/ronny-rentner/ultraclick"
Repository = "https://github.com/ronny-rentner/ultraclick.git"
Issues = "https://github.com/ronny-rentner/ultraclick/issues"